--- a/pyda-functions-hw.ipynb
+++ b/pyda-functions-hw.ipynb
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,32 +217,15 @@
     "    '1': ['2207 876234', '11-2', '5455 028765'],\n",
     "    '2': ['10006', '5400 028765', '5455 002299'],\n",
     "    '3': []\n",
-    "}"
+    "}\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 124,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Введите номер документа11-2\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'Геннадий Покемонов'"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def find_person ():\n",
     "    number = input ('Введите номер документа')\n",
@@ -250,12 +233,12 @@
     "        if k['number'] == number:\n",
     "            return k['name']\n",
     "    return 'Документа не существует'    \n",
-    "find_person ()"
+    "#find_person ()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,38 +286,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
     "def delite ():\n",
     "    number = input('Введите номер документа:')\n",
+    "\n",
     "    for elements in documents:\n",
     "        if elements ['number'] == number:\n",
     "            documents.remove(elements)\n",
-    "            return   \n",
-    "    return 'Документа не существует'\n",
+    "\n",
     "    for key, values in directories.items():\n",
     "        if number in values:\n",
     "            directories[key].remove(number)\n",
+    "            return (documents, directories)   \n",
+    "    return( 'Документа не существует')    \n",
     "#delite ()           "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "        "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -356,58 +329,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [],
    "source": [
     "def add():\n",
     "    new_doc ={}\n",
-    "    documents.append(new_doc)\n",
-    "    new_number = input ('Введите номер документа:') \n",
-    "    new_type = input ('Введите тип документа:')\n",
-    "    new_name = input ('Введите имя владельца:')\n",
+    "    new_number = input ('Введите номер документа:')\n",
     "    shelf_n = input ('введите номер полки:')\n",
-    "    new_doc['type'] = new_type\n",
-    "    new_doc['number'] = new_number\n",
-    "    new_doc['name'] = new_name\n",
     "    for keys, values in directories.items():\n",
     "        if shelf_n == keys:\n",
-    "            directories[keys].append(new_number)\n",
-    "            return directories\n",
-    "    return ('Полки не существует')     \n",
-    "        "
+    "            directories[keys].append(new_number)  \n",
+    "      \n",
+    "            documents.append(new_doc)\n",
+    "\n",
+    "            new_type = input ('Введите тип документа:')\n",
+    "            new_name = input ('Введите имя владельца:')\n",
+    "            new_doc['type'] = new_type\n",
+    "            new_doc['number'] = new_number\n",
+    "            new_doc['name'] = new_name\n",
+    "            return (documents, directories)\n",
+    "    \n",
+    "    return ('Полки не существует')  \n",
+    "\n",
+    "#add()       "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 132,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Введите команду:p\n",
+      "Введите номер документа11-2\n",
+      "Геннадий Покемонов\n"
+     ]
+    }
+   ],
    "source": [
     "def main():\n",
     "    comand = input('Введите команду:')\n",
     "    if comand =='p':\n",
-    "            return find_person() \n",
+    "            print(find_person()) \n",
     "\n",
     "    elif comand =='s':\n",
-    "            return find_shelf()\n",
+    "            print( find_shelf())\n",
     "        \n",
     "    elif comand =='l':\n",
-    "            return list_person()  \n",
+    "            print (list_person()) \n",
     "        \n",
     "    elif comand =='as':\n",
-    "            return add_shelf() \n",
+    "             print  (add_shelf()) \n",
     "        \n",
     "    elif comand =='d':\n",
-    "            return delite()    \n",
+    "             print  (delite())    \n",
     "    \n",
     "    elif comand =='m':\n",
-    "            return move_d()\n",
+    "             print (move_d())\n",
     "        \n",
     "    elif comand =='a':\n",
-    "            return add()    \n",
+    "             print (add())    \n",
     "\n",
-    "#main()    "
+    "main()    "
    ]
   },
   {
